test/good/lambdas/lambda13.px

func apply(Int->Int f, Int x) Int def
    return f(x)

print apply(2*_, apply(_+1, 3))
