test/bad/functions/lambda09.px

func f(Int,Int->Int g) def
    return

f(_)
